# django-log-outgoing-requests

./: .bumpversion.cfg  .editorconfig  .git-blame-ignore-revs  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: conf.py  index.rst  quickstart.rst  reference.rst  structlog.rst
log_outgoing_requests/: __init__.py  admin.py  apps.py  compat.py  conf.py  config_reset.py  constants.py  datastructures.py  formatters.py  handlers.py  log_requests.py  models.py  structlog.py  syntax_highlighting.py  tasks.py  typing.py  urls.py  utils.py  views.py
log_outgoing_requests/locale/nl/LC_MESSAGES/: django.mo  django.po
log_outgoing_requests/management/commands/: prune_outgoing_request_logs.py
log_outgoing_requests/migrations/: 0001_initial.py  0002_outgoingrequestslogconfig_and_more.py  0003_alter_outgoingrequestslog_options_and_more.py  0004_alter_outgoingrequestslog_hostname_and_more.py  0005_alter_outgoingrequestslog_url.py  0006_outgoingrequestslogconfig_reset_db_save_after.py  0007_outgoingrequestslogconfig_prettify_bodies.py
log_outgoing_requests/static/log_outgoing_requests/css/: admin.css  highlight.css
log_outgoing_requests/static/log_outgoing_requests/js/: admin.js
log_outgoing_requests/templates/log_outgoing_requests/: change_form.html
testapp/: __init__.py  celery.py  settings.py  urls.py
tests/: conftest.py  test_admin.py  test_exception_logging.py  test_formatter.py  test_handlers.py  test_logging.py  test_structlog.py  test_syntax_highlighting.py  test_tasks.py  test_typing_helpers.py  test_utils.py
