[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-log-outgoing-requests"
version = "0.7.1"
description = "Log outgoing requests made by the requests python library"
authors = [
    {name = "Maykin Media", email = "support@maykinmedia.nl"}
]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["logging", "requests", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "requests",
    "django-appconf",
    "django-solo",
    "typing-extensions",
]

[project.urls]
Homepage = "https://github.com/maykinmedia/django-log-outgoing-requests"
Documentation = "http://django-log-outgoing-requests.readthedocs.io/en/latest/"
Changelog = "https://github.com/maykinmedia/django-log-outgoing-requests/blob/main/CHANGELOG.rst"
"Bug Tracker" = "https://github.com/maykinmedia/django-log-outgoing-requests/issues"
"Source Code" = "https://github.com/maykinmedia/django-log-outgoing-requests"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-env",
    "pytest-mock",
    "freezegun",
    "requests-mock",
    "pyquery",
    "tox",
    "ruff",
    # "pyright",
    # "django-stubs",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
release = [
    "bump-my-version",
]
celery = [
    "celery",
]

[tool.setuptools.packages.find]
include = ["log_outgoing_requests*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "testapp.settings"
filterwarnings = [
    "error:DateTimeField .* received a naive datetime:RuntimeWarning:django.db.models.fields",
]
markers = [
    "real_db_close: do not patch timeline_logger.handlers.close_old_connections",
]
env = [
    "_LOG_OUTGOING_REQUESTS_LOGGER_DEFER_LISTENER=true",
]

[tool.bumpversion]
current_version = "0.7.1"
files = [
    {filename = "pyproject.toml"},
    {filename = "README.rst"},
    {filename = "docs/conf.py"},
]

[tool.coverage.run]
branch = true
source = ["log_outgoing_requests"]
omit = [
    # migrations run while django initializes the test db
    "*/migrations/*",
]

[tool.coverage.report]
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "\\bpass$",
]

[tool.pyright]
include = [
    "log_outgoing_requests",
    "testapp",
    "tests",
]
ignore = []
# pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "DJ",  # django
    "LOG", # logging
    "G",
    "I",   # isort
    "E",   # pycodestyle
    "F",   # pyflakes
    "PERF",# perflint
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
