# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-log-outgoing-requests
version = 0.3.0
description = Log outgoing requests made by the requests python library
long_description = file: README.rst
url = https://github.com/maykinmedia/django-log-outgoing-requests
project_urls =
    Documentation = http://django-log-outgoing-requests.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/django-log-outgoing-requests/blob/main/CHANGELOG.rst
    Bug Tracker = https://github.com/maykinmedia/django-log-outgoing-requests/issues
    Source Code = https://github.com/maykinmedia/django-log-outgoing-requests
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = logging
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.2
    requests
    django-appconf
    django-solo
tests_require =
    pytest
    pytest-django
    tox
    isort
    black
    flake8
    freezegun
    requests-mock
    pyquery

[options.packages.find]
include =
    log_outgoing_requests
    log_outgoing_requests.*

[options.extras_require]
tests =
    pytest
    pytest-django
    pyquery
    tox
    isort
    black
    flake8
    freezegun
    requests-mock
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump2version
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=log_outgoing_requests
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings
filterwarnings =
    error:DateTimeField .* received a naive datetime:RuntimeWarning:django.db.models.fields

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,doc
ignore=E203,W503,E501

[coverage:run]
branch = True
source = log_outgoing_requests
